# Job-Hunt-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
jobassist/: aliases.py  cli.py  dedupe.py  drafter.py  extractor.py  index.py  report.py  salary.py  schemas.py  scorer.py  store.py  volume.py
jobassist/sources/: adzuna.py  ashby.py  bamboohr.py  base.py  company_page.py  detector.py  greenhouse.py  lever.py  personio.py  reed.py  smartrecruiters.py  teamtailor.py  workday.py
tests/: test_additional_ats.py  test_adzuna.py  test_aliases.py  test_ats_fetchers.py  test_cli.py  test_company_page.py  test_dedupe.py  test_detector.py  test_drafter.py  test_extractor.py  test_index.py  test_reed.py  test_report.py  test_salary.py  test_schemas.py  test_scorer.py  test_source_protocol.py  test_store.py  test_volume.py  test_workday.py
tests/fixtures/: adzuna_search_p1.json  adzuna_search_p2.json  ashby_jobs.json  bamboohr_jobs.json  greenhouse_acme.json  lever_acme.json  personio_jobs.json  reed_search.json  smartrecruiters_jobs.json  teamtailor_jobs.json  workday_jobs.json
