[project]
name = "job-hunt-agent"
version = "0.1.0"
description = "Personal job aggregator — search, score, and surface best-fit postings."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "selectolax>=0.4.7",
    "trafilatura>=2.0.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[project.scripts]
jobassist = "jobassist.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
